--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
     "framer-motion": "^12.10.0",
     "react": "^19.0.0",
