--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.4",
-    "vercel": "^41.7.2"
+    "vercel": "^41.7.2",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
